--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "express-session": "^1.19.0",
+    "googleapis": "^171.0.0",
     "helmet": "^8.1.0",
     "method-override": "^3.0.0",
     "multer": "^2.0.2",
