--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "method-override": "^3.0.0",
     "multer": "^2.0.2",
     "pdfkit": "^0.17.2",
+    "pg": "^8.18.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   },
