--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "type": "commonjs",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "bwip-js": "^4.8.0",
     "connect-session-sequelize": "^7.1.7",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
