--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@marsidev/react-turnstile": "^1.4.2",
     "@types/qrcode": "^1.5.6",
     "axios": "^1.13.4",
     "html5-qrcode": "^2.3.8",
